--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -540,15 +540,15 @@
 @Article{xmhf,
   Title                    = {{Design, Implementation and Verification of an eXtensible and Modular Hypervisor Framework}},
   Author                   = {Vasudevan, Amit and Chaki, Sagar and Jia, Limin and McCune, Jonathan and Newsome, James and Datta, Anupam},
-  Journal                  = {2013 IEEE Symposium on Security and Privacy},
+  Journal                  = {{IEEE Symposium on Security and Privacy}},
   Year                     = {2013},
-  Pages                    = {430--444},
-  Volume                   = {0},
+}
 
-  Address                  = {Los Alamitos, CA, USA},
-  Doi                      = {10.1109/SP.2013.36},
-  ISSN                     = {1081-6011},
-  Publisher                = {IEEE Computer Society}
+@inproceedings{sriov,
+  Title                    = {{SR-IOV Networking in Xen: Architecture, Design and Implementation}},
+  Author                   = {Yaozu Dong and Zhao Yu and Greg Rose},
+  booktitle                = {{USENIX Workshop on I/O Virtualization (WIOV)}},
+  Year                     = {2008},
 }
 
 @Article{Wasserman:turtles,
