--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -18,6 +18,13 @@
   X-fetchedfrom            = {Bibsonomy}
 }
 
+@misc{CSA:TT,
+  Title                    = {{The Notorious Nine Cloud Computing Top Threats in 2013}},
+  Author                   = {{Cloud Security Alliance}},
+  Year                     = {2013},
+	Month										 = {February}
+}
+
 @InProceedings{gordon2012ELIbarperI/Ovir,
   Title                    = {{ELI: bare-metal performance for I/O virtualization.}},
   Author                   = {Gordon, Abel and Amit, Nadav and Har'El, Nadav and Ben-Yehuda, Muli and Landau, Alex and Schuster, Assaf and Tsafrir, Dan},
@@ -148,6 +155,27 @@
   X-fetchedfrom            = {Bibsonomy}
 }
 
+@inproceedings{KungFuVisor,
+  author = {Aur\'{e}lien Wailly and Marc Lacoste and Herv\'{e} Debar},
+	title = {{KungFuVisor: Enabling Hypervisor Self-Defense}},
+	booktitle = {{EUROSYS Doctoral Workshop (EURODW)}},
+	year = {2012}
+}
+
+@INPROCEEDINGS{VESPA,
+  author = {Aurelien Wailly and Marc Lacoste and Herv\'{e} Debar},
+  title = {{VESPA: Multi-Layered Self-Protection for Cloud Resources}},
+  booktitle = {{International Conference on Autonomic Computing (ICAC)}},
+  year = {2012}
+}
+
+@inproceedings{VESPA:UCC,
+  author = {Marc Lacoste and Aurélien Wailly and Aymeric Tabourin and Loïc Habermacher and Xavier {Le Guillou} and Jean-Philippe Wary},
+	title  = {{Flying Over Mobile Clouds with Security Planes: Select your Class of SLA for End-to-End Security}},
+	booktitle = {{International Conference on Cloud and Utility Computing (UCC)}},
+	year = {2013}
+} 
+
 @Article{xen:art,
   Title                    = {{Xen and the art of virtualization}},
   Author                   = {Barham, Paul and Dragovic, Boris and Fraser, Keir and Hand, Steven and Harris, Tim and Ho, Alex and Neugebauer, Rolf and Pratt, Ian and Warfield, Andrew},
@@ -186,13 +214,28 @@
  year = {2011},
 } 
 
+
 @article{xclo:blank,
-  author = {Dan Williams and Hani Jamjoom and Hakim Weatherspoon}, 
-  title = {{Plug into the Supercloud}},
-  journal = {{IEEE Internet Computing, Special Issue on Virtualization}}, 
+  author = {Dan Williams and Hani Jamjoom and Hakim Weatherspoon},
+	title = {{Plug into the Supercloud}},
+	journal ={{IEEE Internet Computing}},
 	volume = {17},
 	number = {2},
 	year = {2013},
+	pages = {28--34},
+}
+
+
+@inproceedings{MinV,
+ author = {{Nguyen, Anh and Raj, Himanshu and Rayanchu, Shravan and Saroiu, Stefan and Wolman, Alec}},
+ title = {{Delusional Boot: Securing Hypervisors Without Massive Re-engineering}},
+ booktitle = {{7th ACM European Conference on Computer Systems (EUROSYS)}},
+ year = {2012},
+} 
+
+@inproceedings{CUMULUS,
+  author = {{CUMULUS Project}},
+	title = {http://cumulus-project.eu/},
 }
 
 
