--- a/paper/sig-alternate.cls
+++ b/paper/sig-alternate.cls
@@ -840,12 +840,12 @@
 \def\ftype@copyrightbox{8}
 \def\@copyrightspace{
 \@float{copyrightbox}[b]
-\begin{center}
-\setlength{\unitlength}{1pc}
-\begin{picture}(20,6) %Space for copyright notice
-\put(0,-0.95){\crnotice{\@toappear}}
-\end{picture}
-\end{center}
+%\begin{center}
+%\setlength{\unitlength}{1pc}
+%\begin{picture}(20,6) %Space for copyright notice
+%\put(0,-0.95){\crnotice{\@toappear}}
+%\end{picture}
+%\end{center}
 \end@float}
 
 \def\@toappear{} % Default setting blank - commands below change this.
